--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" async="" src="js/jquery-ui-1.12.0/jquery-ui.js"></script>
 	<script type="text/JavaScript">
-		var menu = ["ชั้น10","ชั้น3","ซอยสายลม","สามภาค"];
+		var menu = ["ชั้น10","ชั้น3","ซอยสายลม","สามภาค","ข้าวมันไก่ซอยกลาง","ข้าวราดแกงซอยกลาง","กสิกร","IBM","Toyota","สหกรณ์","ตชด เล็ก","ตชด ใหญ่"];
 
 		$(document).ready(function() {
 		// standard on load code goes here with $ prefix
